Fixed sub-nav rendering behind login modal

--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -100,7 +100,7 @@
     position: fixed;
     background: rgb(0,0,0);
     background: linear-gradient(45deg, rgba(0,0,0,0.85) 0%, rgba(0,0,0,0.98) 100%);
-    z-index: 2;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
